fix blurred background - this messes up rounded corner

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,11 +2,6 @@
   /*border: 8px solid red;*/
 }
 
-#searchLightBlurredBackground {
-  /* this will hide the sharp corners of backgrounds */
-  border: 12px !important;
-}
-
 #searchLightBox {
   padding: 14px;
   border-radius: 16px;
